# switch-cmake

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  DevkitA64Libnx.cmake  LICENSE  NintendoSwitch.cmake  README.md  README.rst  devkita64-libnx.cmake
cmake/: FindLIBNX.cmake  FindLIBTWILI.cmake  FindLibTwili.cmake  SwitchTools.cmake  clang-dev-tools.cmake  nx-utils.cmake  options.cmake  utils.cmake
include/: CMakeLists.txt
src/: CMakeLists.txt  main.c  main.cc
templates/: CMakeLists.txt
templates/application/: CMakeLists.txt
templates/application/source/: main.c
templates/sysmodule/: CMakeLists.txt  sysmodule.json
templates/sysmodule/source/: main.c
